# agent-arena

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
.github/workflows/: pages.yml
data/: board.json
docs/: BUILD.md  DESIGN.md  ESCROW.md  ROADMAP.md  THREATS.md
programs/arena-vault/: Cargo.toml
programs/arena-vault/src/: lib.rs
src/: arena.js  board.js  build.js  claims.js  cli.js  duel.js  feed.js  forecasters.js  render.js  score.js  server.js
test/: arena.test.js  board.test.js  claims.test.js  duel.test.js  render.test.js  score.test.js
tests/: arena-vault.ts  vault.test.mjs
