[package]
name = "arena-vault"
version = "0.0.0"
description = "Agent Battle Arena non-custodial vault (DRAFT — not audited)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arena_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = "0.6.1"
